2006-07-12  Jakub Steiner <jimmac@ximian.com>

	* scalable/status/appointment-*.*: fix 's' namespace URI
	* scalable/actions/go-home*: align to the grid better

2006-07-11  Rodney Dawes  <dobey@novell.com>

	* 48x48/actions/Makefile.am:
	* 48x48/actions/go-home.*:
	Removed to be replaced with a scalable version of the new style go-home

	* 48x48/categories/Makefile.am:
	* 48x48/categories/applications-internet.*:
	Removed this as a scalable applications-internet already exists

	* scalable/actions/Makefile.am:
	* scalable/actions/go-home.*:
	Add a new scalable version of go-home based on the 22x22 version

2006-07-11  Jakub Steiner <jimmac@ximian.com>

	* scalable/status/appointment-*.*: slight tweaks

2006-07-11  Rodney Dawes  <dobey@novell.com>

	* 48x48/status/Makefile.am:
	* 48x48/status/appointment-*.*:
	Removed these icons as they are replaced by scalable versions

	* scalable/status/Makefile.am:
	* scalable/status/appointment-*.*:
	Add new scalable versions of appointment-{missed,soon} icons

2006-07-10  Rodney Dawes  <dobey@novell.com>

	* NEWS: Update for release and bug fixes
	
	* configure.in: Up version to 2.15.3 for release
	Up icon-naming-utils requirement to 0.7.3

	* Makefile.am: Add 8x8 to SUBDIRS

2006-07-10  Rodney Dawes  <dobey@novell.com>

	* 48x48/apps/Makefile.am: Update to use the same variables as other
	sizes, so that the install-data-local mapping rule will work

	Fixes #347083

2006-07-09  Rodney Dawes  <dobey@novell.com>

	* */apps/accessibility-directory.*:
	* */apps/gnome-settings-accessibility-technologies.*:
	Renamed accessibility-directory to preferences-desktop-accessibility
	to follow the icon naming spec

	* */actions/system-lock-screen.*:
	* */apps/gnome-lockscreen.*:
	Moved gnome-lockscreen to actions/system-lock-screen

	* */apps/gnome-netstatus-*.*:
	* */status/network-*.*:
	Moved gnome-netstatus-* icons to status/network-*

	* */apps/accessories-calculator.*:
	* */apps/gnome-calculator.*: