@@ -113,6 +113,7 @@ scalable/Makefile
 24x24/stock/object/Makefile
 24x24/stock/table/Makefile
 24x24/stock/text/Makefile
+32x32/animations/Makefile
 32x32/apps/Makefile
 32x32/devices/Makefile
 32x32/emblems/Makefile
