@@ -1,3 +1,7 @@
+2006-07-14  Jakub Steiner <jimmac@ximian.com>
+
+	* 32x32/animations/*: spinner at 32x32
+
 2006-07-12  Jakub Steiner <jimmac@ximian.com>
 
 	* scalable/status/appointment-*.*: fix 's' namespace URI
